# spotify-telegram-bot

./: .gitignore  README.md  main.py  pyproject.toml  setup.sh
spotify_api/: api.py
spotify_service/: main.py
spotify_service/spotify_api/: spotify_api.py
telegram-bot/: main.py  settings.json
telegram_bot/: bot.py
web_service/: main.py
web_service/code_references/Flask_site/: flask_basic.py
web_service/code_references/Flask_site/templates/: login.html  page404.html
web_service/code_references/Jinja/: extend.py  jinja_macros.py  jinja_templates.py
web_service/code_references/Jinja/templates/extend/: ex_main.html
web_service/code_references/Jinja/templates/separated/: page.html
web_service/code_references/Requests/: httpbin_basic_tests.py
web_service/modules_test/Flask_site/static/css/: styles.css
web_service/modules_test/Flask_site/templates/: base.html  contact.html
web_service/modules_test/Jinja/: jinja_filters.py  jinja_include.py
web_service/modules_test/Jinja/templates/extend/: ex_about.html
web_service/modules_test/Jinja/templates/separated/: dialogs.html
web_service/modules_test/Requests/Spotify/: get_artists_albums.py
web_service/spotify_api/: spotify_api.py
