[tool.poetry]
name = "web-service"
version = "0.1.0"
description = ""
authors = ["Cometores <anicometores@gmail.com>"]
readme = "README.md"
packages = [{include = "web_service"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
requests = "^2.28.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
